[package]
name = "cobrust-translator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust AI translation subsystem — L0..L3 closed-loop translator."

[lints]
workspace = true

[features]
default = []
# Real-LLM mode is opt-in; M4 ships synthetic mode by default.
real-llm = []

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
cobrust-llm-router = { path = "../cobrust-llm-router" }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
