[package]
name = "cobrust-types-cb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "cb mirror of cobrust-types (ADR-0055a + ADR-0055b): Ty + TypeError arena-form proof artifact."

[lib]
name = "cobrust_types_cb"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cobrust-types = { path = "../cobrust-types" }
cobrust-types-parity = { path = "../cobrust-types-parity" }
cobrust-frontend = { path = "../cobrust-frontend" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cobrust-types = { path = "../cobrust-types" }
cobrust-types-parity = { path = "../cobrust-types-parity" }
