[package]
name = "cobrust-types-parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Parity harness: Rust cobrust-types impl vs cb mirror diff-test (ADR-0055e)."

[lints]
workspace = true

[features]
# Gates cb-side runner; disabled until 0055a + 0055d land.
cb-impl = []
# Gates insta snapshot machinery (on by default for CI loudness).
snapshot = []

[dependencies]
cobrust-types = { path = "../cobrust-types", version = "=0.5.0" }
cobrust-frontend = { path = "../cobrust-frontend" }
cobrust-hir = { path = "../cobrust-hir" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
