[package]
name = "cobrust-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust type system and type checker (static structural typing)."

[lints]
workspace = true

[dependencies]
cobrust-frontend = { path = "../cobrust-frontend" }
cobrust-hir = { path = "../cobrust-hir" }
thiserror = { workspace = true }

# ADR-0041 §H1-H8 acceptance corpus pulls in MIR + codegen at test time
# only — production type-check has zero runtime dependency on either.
[dev-dependencies]
cobrust-mir = { path = "../cobrust-mir" }
cobrust-codegen = { path = "../cobrust-codegen" }
target-lexicon = "0.13"
